--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ body {
   height: 30em;
   width: 12em;
   
-  margin-left: 10em;
+  margin-left: 6em;
   margin-top: 3em;
   border-radius: 0.3em;
   border: 0.3em solid rgb(55, 54, 54);
@@ -94,7 +94,7 @@ body {
 #swiched {
 
   height: 1em;
-  width: 7em;
+  width: 2em;
 
   display: flex;
 
@@ -129,6 +129,23 @@ body {
   cursor: pointer;
   border-radius: 50%;
   background-color: rgb(32, 180, 27);
+
+}
+
+.i {
+
+  height: 2em;
+  width: 2em;
+
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: row;
+
+  cursor: pointer;
+  border-radius: 0.4em;
+  font-weight: bold;
+  background-color: rgb(73, 71, 71);
 
 }
 
