--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
 
   margin: 0;
@@ -13,7 +12,7 @@ body {
   
   background-size: cover;
   background-position: center;
-  background-color: rgb(114, 119, 116);
+  background-color: rgb(69, 78, 63);
 }
 
 .container {
@@ -26,19 +25,19 @@ body {
 
 #television {
 
-  height: 75vh;
-  width: 60vw;
+  height: 60vh;
+  width: 40vw;
 
   background-color: black;
   border: 0.5em solid rgb(55, 54, 54);
-  border-radius: 0.5em;
+  border-radius: 0.8em;
 
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-#pantalla {
+#screen {
 
   height: 100%;
   width: 100%;
@@ -53,14 +52,14 @@ body {
 }
 
 
-.mando {
+.remote {
 
   height: 30em;
-  width: 12em;
+  width: 11em;
   
-  margin-left: 6em;
-  margin-top: 3em;
-  border-radius: 0.3em;
+  margin-left: 5em;
+  margin-top: 0em;
+  border-radius: 4em;
   border: 0.3em solid rgb(55, 54, 54);
 
   display: flex;
@@ -69,11 +68,11 @@ body {
   flex-direction: column;
 
   box-sizing: content-box;
-  background-color: black;
+  background-color: rgb(33, 32, 32);
 }
 
 
-.boton {
+.button {
 
   height: 2.8em;
   width: 2.3em;
@@ -85,16 +84,16 @@ body {
   box-sizing: content-box;
   cursor: pointer;
 
-  border-radius: 0.4em;
+  border-radius: 0.6em;
   font-weight: bold;
-  background-color: rgb(73, 71, 71);
+  background-color: rgb(73, 70, 70);
 
 }
 
-#swiched {
+#remote-menu {
 
-  height: 1em;
-  width: 2em;
+  height: 0.8em;
+  width: 1.8em;
 
   display: flex;
 
@@ -132,27 +131,27 @@ body {
 
 }
 
-.i {
+.information {
 
   height: 2em;
   width: 2em;
 
   display: flex;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
   flex-direction: row;
 
   cursor: pointer;
-  border-radius: 0.4em;
+  border-radius: 5em;
   font-weight: bold;
-  background-color: rgb(73, 71, 71);
+  background-color: rgb(73, 70, 70);
 
 }
 
 
-#changes {
+#vol-prg {
 
-  height: 6em;
+  height: 5em;
   width: 10em;
 
   display: flex;
@@ -162,9 +161,9 @@ body {
 }
 
 
-#Volumen {
+#volumen {
 
-  height: 5.5em;
+  height: 5em;
   width: 2.5em;
 
   display: flex;
@@ -176,12 +175,12 @@ body {
   cursor: pointer;
 
   border-radius: 0.4em;
-  background-color: rgb(73, 71, 71);
+  background-color: rgb(73, 70, 70);
 }
 
-#Canales {
+#channels {
 
-  height: 5.5em;
+  height: 5em;
   width: 2.5em;
 
   display: flex;
@@ -193,10 +192,10 @@ body {
   cursor: pointer;
 
   border-radius: 0.4em;
-  background-color: rgb(73, 71, 71);
+  background-color: rgb(73, 70, 70);
 }
 
-#fila1 {
+#buttonsup {
   
   height: 2em;
   width: 8em;
@@ -208,7 +207,7 @@ body {
 
 }
 
-#fila2 {
+#middlebuttons {
 
   height: 2em;
   width: 8em;
@@ -220,7 +219,7 @@ body {
 
 }
 
-#fila3 {
+#buttonsdown {
 
   height: 2em;
   width: 8em;
@@ -232,7 +231,7 @@ body {
 
 }
 
-#canal {
+#channel {
   
   font-weight: bold;
   font-size: 2em;
@@ -250,7 +249,7 @@ body {
   color: rgb(78, 212, 225);
 }
 
-#hora {
+#hour {
  
   font-weight: bold;
   font-size: 2em;
