--- a/css/styles.css
+++ b/css/styles.css
@@ -510,3 +510,15 @@ body {
     height: 100%;
   }
 }
+
+@media (max-width: 500px) {
+  .container {
+      flex-direction: column;
+  }
+}
+@media (max-width: 500px) {
+  #tv {
+      width: 50vh;
+      margin-top: 20vh; /* Increase the top margin */
+  }
+}
